--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title></title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src='tailwind-3.js'></script>
+    <script src='https://cdn.tailwindcss.com'></script>
 </head>
 
 <body class="p-4 h-[100vh] flex items-center justify-center">
