--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="text-center text-black p-3 ">
                         <i class="fab fa-github text-3xl text-teal-600"></i>
-                        <a href="#" class="block text-sm">GitHub</a>
+                        <a href="https://github.com/ibrahim0891/Javascript-AI" target="__blank" class="block text-sm">GitHub</a>
                     </div>
                     <div class="text-center text-black p-3 ">
                         <i class="fa fa-ellipsis-h text-3xl text-red-600"></i>
