--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="h-full w-full p-3 bg-gray-200 text-right overflow-auto" id="input">
             <!-- Message genarator div -->
-            <p class="text-center pt-2 text-gray-500 text-sm"> <i class="fa fa-users text-2xl"></i> <br> Starting a new conversation </p>
+            <p class="text-center pt-2 text-gray-500 text-sm mb-3"> <i class="fa fa-users text-2xl"></i> <br> Starting a new conversation </p>
         </div>
         <div class="bg-white w-full" style="position:sticky; bottom: 0;">
             <div class="w-full px-3 py-2 flex items-center justify-between border-b">
@@ -64,7 +64,7 @@
                     </div>
                     <h1 class="text-md font-light text-center mt-2"> Md Ibrahim Siam </h1>
                     <p class="text-gray-500 text-sm text-center leading-normal">
-                        Full stack Web developer and programmer since <b>2005</b> <br>
+                        Full stack Web developer and programmer since <b>2004 </b> <br>
                     </p>
                 </div>
             </div>
