--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src='https://cdn.tailwindcss.com'></script>
     <style>
         *{
-            transition: all 1s;
+            transition: all 1s
         }
     </style>
 </head>
