--- a/index.html
+++ b/index.html
@@ -1,39 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html class="dark">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Javascript || Artificial Intelligence </title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src='https://cdn.tailwindcss.com'></script>
+    <script src="tailwind-3.js"></script>
+    <link rel="stylesheet" href="fa-v6/css/all.min.css">
     <style>
-        *{
-            transition: all 1s
+        * {
+            transition: all 1s;
+            scroll-behavior: smooth;
+            font-family: google;
+
         }
+
+        @font-face {
+            src: url("fonts/googleSansText.woff2");
+            font-family: "google";
+            }
+
+            @keyframes zoomIn {
+                from {
+                    transform: scale(0);
+                    opacity: 0;
+                    transform-origin: center;
+                }
+
+                to {
+                    transform: scale(1);
+                    transform-origin: center;
+                    opacity: 1;
+                }
+            }
+
+            .zoomIn {
+                animation: zoomIn 0.5s 1 linear;
+            }
     </style>
+    <script>
+        tailwind.config = {
+            darkMode: "class"
+        }
+    </script>
 </head>
 
-<body class="p-4 h-[100vh] flex items-center justify-center">
-    <div class="chat-box relative h-[650px] w-[360px] max-h-[720px] max-w-[320px] bg-white border shadow-xl shadow-gray-600 rounded-xl overflow-auto flex flex-col items-center justify-between ring-2 ring-black">
-        <div class="bg-white w-full flex items-center justify-between px-5 py-3" style="position:sticky; top: 0; z-index:50;">
-            <div class=" text-slate-700 text-2xl ">
-                <i class="fa fa-bars" onclick="openElement('sideNav','flex')"></i>
+<body class="tilt p-4 h-[100vh] w-full flex items-start sm:items-center justify-center" onload="removeBootScreen()">
+    <div class="chat-box relative h-full sm:h-[43.5em] w-[22.25em] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black">
+        <div class="w-full bg-white px-2 pt-0 flex items-start justify-between" style="z-index: 250;">
+            <div id="statusBar1" class=" flex items-center justify-start w-1/3 pl-3 pt-2.5 text-white">
+                <p class="text-md mr-1 font-bold" id="clock"> 12:01 PM </p>
+                <i class="fab fa-facebook-messenger text-md ml-1"></i>
+                
             </div>
-            <div class="text-center text-light">
-                <h1 class="text-md text-gray-800 font-bold ">Md Ibrahim Siam</h1>
-                <p class="text-gray-400 text-sm -mt-[0.125em]"> Active now </p>
+            <div class="flex items-start w-1/3 justify-center " style="z-index:350;">
+                <div class="bg-black w-full h-[27px] rounded-bl-2xl rounded-br-2xl text-left text-gray-900 pl-5 pt-[0.4em] text-[0.7em]"> <i class="fa fa-circle mr-1"></i> <i class="fa fa-circle"></i></div>
             </div>
+            <div id="statusBar2" class=" flex items-center justify-end w-1/3 pr-3 pt-2.5 text-white">
+                <i class="fab fa-bluetooth text-sm ml-1"></i>
+                <i class="fa fa-wifi text-sm ml-1"></i>
+                <i class="fa fa-battery-full text-xl ml-1"></i>
+            </div>
+        </div>
+
+        <div class="bg-white w-full flex items-center justify-between px-4 py-3" style="position:sticky; top: 0; z-index:50;">
             <div class="relative">
-                <img src="avater.png" class="w-[2.8rem] pl-3" onclick="openElement('lightBox','block')">
+                <img src="avater.png" class="w-[2rem] " onclick="openElement('lightBox','block')">
                 <div class="bg-green-500 w-[10px] h-[10px] absolute right-0 bottom-[-2px] rounded-full border-[2px] border-white"> </div>
             </div>
+            <div class="text-center text-light w-full">
+                <h1 class="text-md text-gray-800 text-sm font-bold ">Md Ibrahim Siam</h1>
+                <p class="text-gray-400 text-sm -mt-[0.125em]"> Active now </p>
+            </div>
+            <div class=" text-slate-700 text-2xl ">
+                <i class="fa fa-ellipsis-h" onclick="openElement('sideNav','flex')"></i>
+            </div>
         </div>
-        <div class="h-full w-full p-3 bg-gray-200 text-right overflow-auto" id="input">
-            <!-- Message genarator div -->
-            <p class="text-center pt-2 text-gray-500 text-sm mb-3"> <i class="fa fa-users text-2xl"></i> <br> Starting a new conversation </p>
+
+        <div class="h-full w-full p-3 bg-gray-200  text-right overflow-auto">
+            <p class="text-center pt-2 text-gray-500 text-sm mb-3"> <i class="fa fa-users text-2xl"></i> <br> Ready for a new conversation </p>
+            <div id="input">
+                <!-- Message genarator div -->
+            </div>
+            <div class="pt-3 text-center " id='liftUp'></div>
         </div>
+
         <div class="bg-white w-full" style="position:sticky; bottom: 0;">
             <div class="w-full px-3 py-2 flex items-center justify-between border-b">
                 <span class="flex items-center justify-center bg-blue-500 text-white text-lg h-[1.9rem] w-[1.9rem] p-2 rounded-full shadow-md shadow-slate-400">
@@ -49,17 +103,20 @@
                 <button id="sendButton" class="fa fa-paper-plane text-3xl"> </button>
             </div>
         </div>
-        <div style="position:absolute; z-index:100;" id="sideNav" class="overflow-auto flex flex-col justify-between top-0 left-0 w-3/4 h-full bg-white shadow-lg shadow-black">
-            <div style="position:sticky; top-0" class="relative w-full flex items-center justify-between px-3 py-2 pt-4 border-b">
-                <h1 class="text-2xl font-bold">About </h1>
-                <i class=" fa fa-close text-gray-700 top-0 right-0" onclick="closeElement('sideNav')"></i>
+
+        <div style="position:absolute; z-index:100;" id="sideNav" class="zoomIn overflow-auto flex flex-col justify-between top-0 right-0 w-full h-full bg-white shadow-lg shadow-black">
+            <div style="position:sticky; top-0" class="relative w-full flex items-center justify-between px-4 py-2 pt-10 border-b">
+                <i class=" fa fa-chevron-left text-gray-700 top-0 right-0" onclick="closeElement('sideNav')"></i>
+                <h1 class="text-2xl font-bold"> Introduction </h1>
+                <i class=" fa fa-cog text-gray-700 top-0 right-0" onclick="closeElement('sideNav')"></i>
             </div>
-            <div class="w-full px-3 py-1 ">
-                <span class="text-[0.725em] ">
-                    This page is integrated with a small AI simulation programme. Type message and click
-                    the paperplane icon. Javascript AI will give you a response. Give it a try.
+            <div class="w-full px-4 py-3">
+                <span class="text-[1em] text-center">
+                    This page is integrated with a small <strong>AI simulation programme </strong>. Type message and click
+                    the paperplane icon. Javascript AI will give you a response. Give it a try. <br>
+                    <small>You can click the profile picture to view it in full screen.</small>
                 </span>
-                <button class="border border-slate-900 text-gray-700 px-2 py-1 text-[0.7em] block m-auto mt-2 rounded-sm" onclick="closeElement('sideNav')"> Get started </button>
+                <button class="animate-pulse border border-slate-900 text-gray-700 px-2 py-1 mt-2 text-[1em] block m-auto mt-4 rounded-full" onclick="closeElement('sideNav')"> Get started </button>
             </div>
             <div class="px-1 py-2 h-full flex flex-row items-center">
                 <div class="w-full flex flex-col items-center justify-center bg-white px-4 py-3 rounded-md m-auto mb-3">
@@ -67,14 +124,15 @@
                         <img src="avater.png" class="w-[3em]" onclick="openElement('lightBox','block') ">
                         <div class="bg-green-500 w-[10px] h-[10px] absolute right-0 bottom-[-2px] rounded-full border-[2px] border-white"> </div>
                     </div>
-                    <h1 class="text-md font-light text-center mt-2"> Md Ibrahim Siam </h1>
+                    <h1 class="text-md font-light text-center mt-2"> Md Ibrahim Siam</h1>
                     <p class="text-gray-500 text-sm text-center leading-normal">
                         Full stack Web developer and programmer since <b>2004 </b> <br>
                     </p>
                 </div>
             </div>
+
             <div class=" flex items-end justify-between">
-                <div class="border-t w-full flex items-center justify-between">
+                <div class="border-t w-full flex items-center justify-between px-2">
                     <div class="text-center text-black p-3">
                         <i class="fa fa-user-circle text-2xl text-green-600"></i>
                         <a href="#" class="block text-sm">Profile</a>
@@ -84,8 +142,10 @@
                         <a href="#" class="block text-sm">Call</a>
                     </div>
                     <div class="text-center text-black p-3 ">
-                        <i class="fab fa-github text-3xl text-teal-600"></i>
-                        <a href="https://github.com/ibrahim0891/Javascript-AI" target="__blank" class="block text-sm">GitHub</a>
+                        <a href="https://github.com/ibrahim0891/Javascript-AI" target="__blank" class="block text-sm">
+                            <i class="fab fa-github text-3xl "></i>
+                            <a>GitHub</a>
+                        </a>
                     </div>
                     <div class="text-center text-black p-3 ">
                         <i class="fa fa-ellipsis-h text-3xl text-red-600"></i>
@@ -95,11 +155,30 @@
             </div>
         </div>
 
-        <div style="z-index:150;" id="lightBox" class="hidden bg-[rgba(0,0,0,0.6)] h-full w-full absolute top-0 left-0">
+        <div style="z-index:150;" id="lightBox" class="hidden zoomIn bg-white h-full w-full absolute top-0 left-0">
             <div class="relative h-full w-full">
-                <i class="fa fa-close text-white p-5 absolute top-0 right-0" onclick="closeElement('lightBox')"></i>
-                <div class="flex items-center justify-center h-full w-full">
+                <i class="fa fa-close text-blue-500 p-5 absolute top-6 right-0 hidden" onclick="closeElement('lightBox')"></i>
+                <div class="flex flex-col items-center justify-center h-full w-full">
                     <img src="avater.png" class="rounded-full w-2/3 shadow-2xl shadow-gray-300">
+                    <button class="w-1/2 border border-black rounded-md px-2 py-2 mt-10 text-md" onclick="closeElement('lightBox')"> close </button>
+                </div>
+            </div>
+        </div>
+
+        <div style="z-index:200;" id="bootScreen" class=" bg-white h-full w-full absolute top-0 left-0">
+            <div class="relative h-full w-full">
+                <div class="flex items-center justify-center h-full w-full">
+                    <div class="rounded-full flex flex-col items-center justify-center">
+                        <i class="fab fa-apple text-8xl animate-pulse" onclick="closeElement('bootScreen')"></i>
+                        <div class=" w-full h-[30px] font-extralight text-md flex items-center justify-center mt-2">
+                            Starting AI Engine...
+                        </div>
+                        <div class="w-full h-[30px] w-[200px] font-extralight flex items-end justify-center mt-0">
+                            <div class="bg-gray-400 w-2/3 h-[0.1em]">
+                                <div id="prograssFill" class="bg-gray-800 w-[0%] h-[0.1em]"> </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
