--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                 <div class="bg-black w-full h-[27px] rounded-bl-2xl rounded-br-2xl text-left text-gray-900 pl-5 pt-[0.4em] text-[0.7em]"> <i class="fa fa-circle mr-1"></i> <i class="fa fa-circle"></i></div>
             </div>
             <div id="statusBar2" class=" flex items-center justify-end w-1/3 pr-3 pt-2.5 text-white">
-                <i class="fab fa-bluetooth text-sm ml-1"></i>
-                <i class="fa fa-wifi text-sm ml-1"></i>
-                <i class="fa fa-battery-full text-xl ml-1"></i>
+                <i class="fab fa-bluetooth text-md ml-1"></i>
+                <i class="fa fa-wifi text-md ml-1"></i>
+                <i class="fa fa-battery-full text-md ml-1"></i>
             </div>
         </div>
 
