--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div id="statusBar2" class=" flex items-center justify-end w-1/3 pr-3 pt-2.5 text-white">
                 <i class="fab fa-bluetooth text-md ml-1"></i>
-                <i class="fa fa-wifi text-md ml-1"></i>
+                <i class="fa fa-wifi text-md ml-1"></i
                 <i class="fa fa-battery-full text-md ml-1"></i>
             </div>
         </div>
