--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 
 <body class="tilt p-4 h-[100vh] w-full flex items-start sm:items-center justify-center" onload="removeBootScreen()">
-    <div class="chat-box relative h-full sm:h-[43.5em] w-[22.25em] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black">
+    <div class="chat-box relative h-full sm:h-[43.5em] w-[23.25em] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black">
         <div class="w-full bg-white px-2 pt-0 flex items-start justify-between" style="z-index: 250;">
             <div id="statusBar1" class=" flex items-center justify-start w-1/3 pl-3 pt-2.5 text-white">
                 <p class="text-md mr-1 font-bold" id="clock"> 12:01 PM </p>
@@ -170,12 +170,12 @@
                 <div class="flex items-center justify-center h-full w-full">
                     <div class="rounded-full flex flex-col items-center justify-center">
                         <i class="fab fa-apple text-8xl animate-pulse" onclick="closeElement('bootScreen')"></i>
-                        <div class=" w-full h-[30px] font-extralight text-md flex items-center justify-center mt-2">
+                        <div class="hidden w-full h-[30px] font-extralight text-md flex items-center justify-center mt-2">
                             Starting AI Engine...
                         </div>
-                        <div class="w-full h-[30px] w-[200px] font-extralight flex items-end justify-center mt-0">
-                            <div class="bg-gray-400 w-2/3 h-[0.1em]">
-                                <div id="prograssFill" class="bg-gray-800 w-[0%] h-[0.1em]"> </div>
+                        <div class="w-full h-[1.5rem] w-[200px] font-extralight flex items-end justify-center mt-0">
+                            <div class="bg-gray-400 w-2/3 h-[0.25rem] overflow-hidden">
+                                <div id="prograssFill" class="bg-gray-800 w-[0%] h-[0.25rem] rounded-br-full rounded-tr-full"> </div>
                             </div>
                         </div>
                     </div>
