--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="flex items-center justify-center h-full w-full">
                     <div class="rounded-full flex flex-col items-center justify-center">
                         <i class="fab fa-apple text-8xl animate-pulse" onclick="closeElement('bootScreen')"></i>
-                        <div class="hidden w-full h-[30px] font-extralight text-md flex items-center justify-center mt-2">
+                        <div id="progressOutput" class="w-full h-[30px] font-extralight text-md flex items-center justify-center mt-2">
                             Starting AI Engine...
                         </div>
                         <div class="w-full h-[1.5rem] w-[200px] font-extralight flex items-end justify-center mt-0">
