--- a/index.html
+++ b/index.html
@@ -52,16 +52,15 @@
     <div class="chat-box relative aspect-[2/4] max-w-[556px] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black">
         <div class="w-full bg-white px-2 pt-0 flex items-start justify-between" style="z-index: 250;">
             <div id="statusBar1" class=" flex items-center justify-start w-1/3 pl-3 pt-2.5 text-white">
-                <p class="text-md mr-1 font-bold" id="clock"> 12:01 PM </p>
-                <i class="fab fa-facebook-messenger text-md ml-1"></i>
-
+                <p class="text-sm mr-1 font-bold" id="clock"> 12:01 PM </p>
+                <i class="fab fa-facebook-messenger text-sm ml-1"></i>
             </div>
             <div class="flex items-start w-1/3 justify-center " style="z-index:350;">
-                <div class="bg-black w-full h-[27px] rounded-bl-2xl rounded-br-2xl text-left text-gray-900 pl-5 pt-[0.4em] text-[0.7em]"> <i class="fa fa-circle mr-1"></i> <i class="fa fa-circle"></i></div>
+                <div class="bg-black w-full h-[27px] rounded-bl-2xl rounded-br-2xl text-left text-gray-900 pl-3 pt-[0.45em] text-[0.65em]"> <i class="fa fa-circle mr-1"></i> <i class="fa fa-circle"></i></div>
             </div>
             <div id="statusBar2" class=" flex items-center justify-end w-1/3 pr-3 pt-2.5 text-white">
-                <i class="fab fa-bluetooth text-md ml-1"></i>
-                <i class="fa fa-wifi text-md ml-1"></i <i class="fa fa-battery-full text-md ml-1"></i>
+                <i class="fab fa-bluetooth text-sm ml-1"></i>
+                <i class="fa fa-wifi text-sm ml-1"></i <i class="fa fa-battery-full text-md ml-1"></i>
             </div>
         </div>
 
@@ -110,10 +109,10 @@
                 <i class=" fa fa-cog text-gray-700 top-0 right-0" onclick="closeElement('sideNav')"></i>
             </div>
             <div class="w-full px-4 py-3">
-                <span class="text-[1em] text-center">
+                <span class="text-[0.7em] text-center">
                     This page is integrated with a small <strong>AI simulation programme </strong>. Type message and click
                     the paperplane icon. Javascript AI will give you a response. Give it a try. <br><br>
-                    You can format text with html code. Image can also be sent with image tag with src attribute.
+                    You can format text with html code. Image can also be sent with image tag with src attribute.<br>
                     <small>You can click the profile picture to view it in full screen.</small>
                 </span>
                 <button class="animate-pulse border border-slate-900 text-gray-700 px-2 py-1 mt-2 text-[1em] block m-auto mt-4 rounded-full" onclick="closeElement('sideNav')"> Get started </button>
