--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 
 <body class="tilt p-4 h-[100vh] w-full flex items-start sm:items-center justify-center" onload="removeBootScreen()">
-    <div class="chat-box relative aspect-[2/4] max-w-[556px] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black">
+    <div class="chat-box relative aspect-[2/4] max-w-[370px] md:scale-[2] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black">
         <div class="w-full bg-white px-2 pt-0 flex items-start justify-between" style="z-index: 250;">
             <div id="statusBar1" class=" flex items-center justify-start w-1/3 pl-3 pt-2.5 text-white">
                 <p class="text-sm mr-1 font-bold" id="clock"> 12:01 PM </p>
@@ -109,7 +109,7 @@
                 <i class=" fa fa-cog text-gray-700 top-0 right-0" onclick="closeElement('sideNav')"></i>
             </div>
             <div class="w-full px-4 py-3">
-                <span class="text-[0.7em] text-center">
+                <span class="text-[0.9em] text-center">
                     This page is integrated with a small <strong>AI simulation programme </strong>. Type message and click
                     the paperplane icon. Javascript AI will give you a response. Give it a try. <br><br>
                     You can format text with html code. Image can also be sent with image tag with src attribute.<br>
@@ -137,8 +137,10 @@
                         <a href="#" class="block text-sm">Profile</a>
                     </div>
                     <div class="text-center text-black p-3">
-                        <i class="fa fa-phone text-2xl text-blue-600"></i>
-                        <a href="#" class="block text-sm">Call</a>
+                        <a href="tel:01909045958">
+                            <i class="fa fa-phone text-2xl text-blue-600"></i>
+                            <a class="block text-sm">Call</a>
+                        </a>
                     </div>
                     <div class="text-center text-black p-3 ">
                         <a href="https://github.com/ibrahim0891/Javascript-AI" target="__blank" class="block text-sm">
