--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
         </div>
 
-        <div class="bg-white w-full flex items-center justify-between px-4 py-3 shadow-md" style="position:sticky; top: 0; z-index:50;">
+        <div class="bg-white w-full flex items-center justify-between px-4 py-3 border-b" style="position:sticky; top: 0; z-index:50;">
             <div class="relative">
                 <img src="avater.png" class="w-[2rem] " onclick="openElement('lightBox','block')">
                 <div class="bg-green-500 w-[10px] h-[10px] absolute right-0 bottom-[-2px] rounded-full border-[2px] border-white"> </div>
