--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="fa-v6/css/all.min.css">
     <style>
         * {
-            transition: all 1s;
+            transition: all 2.5s;
             scroll-behavior: smooth;
             font-family: google;
 
@@ -24,21 +24,37 @@
         }
 
         @keyframes zoomIn {
-            from {
-                transform: scale(0);
-                opacity: 0;
-                transform-origin: center;
+            0% {
+                transform: scale(2.5);
+
             }
 
-            to {
+            100% {
                 transform: scale(1);
-                transform-origin: center;
+            }
+        }
+
+        @keyframes zoomOut {
+            0% {
+                transform: scale(0);
+                border-radius: 35px;
+                opacity: 0;
+
+            }
+
+            100% {
+                transform: scale(1);
+                border-radius: 0px;
                 opacity: 1;
             }
         }
 
         .zoomIn {
-            animation: zoomIn 0.5s 1 linear;
+            animation: zoomIn 1s 1 linear;
+        }
+
+        .zoomOut {
+            animation: zoomOut 0.7s 1 linear;
         }
     </style>
     <script>
@@ -60,7 +76,7 @@
             </div>
             <div id="statusBar2" class=" flex items-center justify-end w-1/3 pr-3 pt-2.5 text-white">
                 <i class="fab fa-bluetooth text-sm ml-1"></i>
-                <i class="fa fa-wifi text-sm ml-1"></i> 
+                <i class="fa fa-wifi text-sm ml-1"></i>
                 <i class="fa fa-battery-full text-md ml-1"></i>
             </div>
         </div>
@@ -98,12 +114,13 @@
                 <span class="flex items-center justify-center bg-green-500 text-white text-lg h-[1.9rem] w-[1.9rem] p-2 rounded-full shadow-md shadow-slate-400 ml-1">
                     <i class="fa fa-images "></i>
                 </span>
-                <input type="text" class='focus:outline-0 rounded-full border text-sm text-gray-500 px-3 py-2 mx-2 w-full' placeholder="Say 'hi' to ai" id="textBox">
-                <button id="sendButton" class="fa fa-paper-plane text-3xl"> </button>
+                
+                <input type="text" class='focus:outline-0 rounded-full border text-sm text-gray-500 px-3 py-2 mx-2 w-full' placeholder="Say 'Hi' to AI..." id="textBox">
+                <button id="sendButton" class="fa fa-paper-plane text-3xl"> 😳 </button>
             </div>
         </div>
 
-        <div style="position:absolute; z-index:100;" id="sideNav" class="zoomIn overflow-auto flex flex-col justify-between top-0 right-0 w-full h-full bg-white shadow-lg shadow-black">
+        <div style="position:absolute; z-index:100;" id="sideNav" class="hidden zoomIn overflow-auto flex flex-col justify-between top-0 right-0 w-full h-full bg-white shadow-lg shadow-black">
             <div style="position:sticky; top-0" class="relative w-full flex items-center justify-between px-4 py-2 pt-10 border-b">
                 <i class=" fa fa-chevron-left text-gray-700 top-0 right-0" onclick="closeElement('sideNav')"></i>
                 <h1 class="text-2xl font-bold"> Introduction </h1>
@@ -157,7 +174,7 @@
             </div>
         </div>
 
-        <div style="z-index:150;" id="lightBox" class="hidden zoomIn bg-white h-full w-full absolute top-0 left-0">
+        <div style="z-index:150;" id="lightBox" class="hidden zoomOut bg-white h-full w-full absolute top-0 left-0">
             <div class="relative h-full w-full">
                 <i class="fa fa-close text-blue-500 p-5 absolute top-6 right-0 hidden" onclick="closeElement('lightBox')"></i>
                 <div class="flex flex-col items-center justify-center h-full w-full">
