--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         @keyframes zoomOut {
             0% {
-                transform: scale(0);
+                transform: scale(0.5);
                 border-radius: 35px;
                 opacity: 0;
 
@@ -116,7 +116,7 @@
                 </span>
                 
                 <input type="text" class='focus:outline-0 rounded-full border text-sm text-gray-500 px-3 py-2 mx-2 w-full' placeholder="Say 'Hi' to AI..." id="textBox">
-                <button id="sendButton" class="fa fa-paper-plane text-3xl"> 😳 </button>
+                <button id="sendButton" class="fa fa-paper-plane text-3xl"> </button>
             </div>
         </div>
 
