--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 
 <body class="tilt p-4 h-[100vh] w-full flex items-start sm:items-center justify-center" onload="removeBootScreen()">
-    <div class="chat-box relative aspect-[2/4] max-w-[370px] md:scale-[1.2] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black">
+    <div class="chat-box relative aspect-[2/4] max-w-[370px] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black">
         <div class="w-full bg-white px-2 pt-0 flex items-start justify-between" style="z-index: 250;">
             <div id="statusBar1" class=" flex items-center justify-start w-1/3 pl-3 pt-2.5 text-white">
                 <p class="text-sm mr-1 font-bold" id="clock"> 12:01 PM </p>
