--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
             left: 0;
             height: 100vh;
             width: 100vw;
-            display: flex;
+            display: none;
             align-items: center;
             justify-content: center;
             z-index: 500;
-            font-size:2em;
+            font-size: 2em;
         }
 
+        /* 
         @media screen and (orientation:portrait) {
             .chat-box {
                 display: flex;
@@ -96,7 +97,7 @@
             .showOrientationWarning {
                 display: block;
             }
-        }
+        } */
     </style>
     <script>
         tailwind.config = {
@@ -107,17 +108,18 @@
 
 <body class="tilt p-4 h-[100vh] w-full flex items-start sm:items-center justify-center" onload="removeBootScreen()">
     <div class="showOrientationWarning"> Please turn off Auto rotate of your devise or resize your browser window to Portrait size to view the page </div>
-    <div class="chat-box relative aspect-[2/4] max-w-[370px] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black">
+    <div class="chat-box relative aspect-[2/4] max-w-[370px] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black my-4">
         <div class="w-full bg-white px-2 pt-0 flex items-start justify-between" style="z-index: 250;">
             <div id="statusBar1" class=" flex items-center justify-start w-1/3 pl-3 pt-2.5 text-white">
                 <p class="text-sm mr-1 font-bold" id="clock"> 12:01 PM </p>
-                <i class="fab fa-facebook-messenger text-sm ml-1"></i>
+            <i class="fab fa-facebook-messenger text-sm ml-1"></i>
             </div>
             <div class="flex items-start w-1/3 justify-center " style="z-index:350;">
                 <div class="bg-black w-full h-[27px] rounded-bl-2xl rounded-br-2xl text-left text-gray-900 pl-3 pt-[0.45em] text-[0.65em]"> <i class="fa fa-circle mr-1"></i> <i class="fa fa-circle"></i></div>
             </div>
             <div id="statusBar2" class=" flex items-center justify-end w-1/3 pr-3 pt-2.5 text-white">
                 <i class="fab fa-bluetooth text-sm ml-1"></i>
+                <i class="fa fa-signal text-sm ml-1"></i>
                 <i class="fa fa-wifi text-sm ml-1"></i>
                 <i class="fa fa-battery-full text-md ml-1"></i>
             </div>
