--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <body class="tilt p-4 h-[100vh] w-full flex items-start sm:items-center justify-center" onload="removeBootScreen()">
     <div class="showOrientationWarning"> Please turn off Auto rotate of your devise or resize your browser window to Portrait size to view the page </div>
-    <div class="chat-box relative aspect-[2/4] max-w-[370px] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black my-4">
+    <div class="chat-box relative aspect-[2/4] min-w-[370px] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black m-4">
         <div class="w-full bg-white px-2 pt-0 flex items-start justify-between" style="z-index: 250;">
             <div id="statusBar1" class=" flex items-center justify-start w-1/3 pl-3 pt-2.5 text-white">
                 <p class="text-sm mr-1 font-bold" id="clock"> 12:01 PM </p>
