--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     </script>
 </head>
 
-<body class="tilt p-4 h-[100vh] w-full flex items-start sm:items-center justify-center" onload="removeBootScreen()">
+<body class="tilt p-6 h-[100vh] w-full flex items-start sm:items-center justify-center" onload="removeBootScreen()">
     <div class="showOrientationWarning"> Please turn off Auto rotate of your devise or resize your browser window to Portrait size to view the page </div>
-    <div class="chat-box relative aspect-[2/4] min-w-[370px] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black m-4">
+    <div class="chat-box relative aspect-[2/4] sm:max-w-[350px] md:min-w-[370px] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black shadow-md shadow-slate-800/80">
         <div class="w-full bg-white px-2 pt-0 flex items-start justify-between" style="z-index: 250;">
             <div id="statusBar1" class=" flex items-center justify-start w-1/3 pl-3 pt-2.5 text-white">
                 <p class="text-sm mr-1 font-bold" id="clock"> 12:01 PM </p>
@@ -164,8 +164,8 @@
             </div>
         </div>
 
-        <div style="position:absolute; z-index:100;" id="sideNav" class="hidden zoomIn overflow-auto flex flex-col justify-between top-0 right-0 w-full h-full bg-white shadow-lg shadow-black">
-            <div style="position:sticky; top-0" class="relative w-full flex items-center justify-between px-4 py-2 pt-10 border-b">
+        <div style="position:absolute; top:0; z-index:100;" id="sideNav" class=" hidden zoomIn overflow-auto flex flex-col justify-between top-0 right-0 w-full h-full bg-white shadow-lg shadow-black">
+            <div style="position:relative; top-0" class="bg-white relative w-full flex items-center justify-between px-4 py-2 pt-10 border-b">
                 <i class=" fa fa-chevron-left text-gray-700 top-0 right-0" onclick="closeElement('sideNav')"></i>
                 <h1 class="text-2xl font-bold"> Introduction </h1>
                 <i class=" fa fa-cog text-gray-700 top-0 right-0" onclick="closeElement('sideNav')"></i>
@@ -177,6 +177,7 @@
                     You can format text with html code. Image can also be sent with image tag with src attribute.<br>
                     <small>You can click the profile picture to view it in full screen.</small>
                 </span>
+                
                 <button class="animate-pulse border border-slate-900 text-gray-700 px-2 py-1 mt-2 text-[1em] block m-auto mt-4 rounded-full" onclick="closeElement('sideNav')"> Get started </button>
             </div>
             <div class="px-1 py-2 h-full flex flex-row items-center">
@@ -192,9 +193,9 @@
                 </div>
             </div>
 
-            <div class=" flex items-end justify-between">
+            <div class="bg-white flex items-end justify-between" style="position:sticky; bottom:0;">
                 <div class="border-t w-full flex items-center justify-between px-2">
-                    <div class="text-center text-black p-3">
+                    <div class="text-center text-black p-2">
                         <i class="fa fa-user-circle text-2xl text-green-600"></i>
                         <a href="#" class="block text-sm">Profile</a>
                     </div>
@@ -204,13 +205,13 @@
                             <a class="block text-sm">Call</a>
                         </a>
                     </div>
-                    <div class="text-center text-black p-3 ">
+                    <div class="text-center text-black p-2 ">
                         <a href="https://github.com/ibrahim0891/Javascript-AI" target="__blank" class="block text-sm">
                             <i class="fab fa-github text-3xl "></i>
                             <a>GitHub</a>
                         </a>
                     </div>
-                    <div class="text-center text-black p-3 ">
+                    <div class="text-center text-black p-2 ">
                         <i class="fa fa-ellipsis-h text-3xl text-red-600"></i>
                         <a href="#" class="block text-sm">More</a>
                     </div>
@@ -238,7 +239,7 @@
                                 <div id="prograssFill" class="bg-gray-800 w-[2%] h-[0.25rem] rounded-full rounded-br-full rounded-tr-full flex items-center justify-end"> <i class="hidden fa fa-circle text-md "></i> </div>
                             </div>
                         </div>
-                        <div id="progressOutput" class="w-full h-[20px] font-extralight text-md flex items-center justify-center mt-4">
+                        <div id="progressOutput" class="hidden w-full h-[20px] font-extralight text-md flex items-center justify-center mt-4">
                             Starting AI Engine...
                         </div>
                     </div>
