--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     </script>
 </head>
 
-<body class="tilt p-6 h-[100vh] w-full flex items-start sm:items-center justify-center" onload="removeBootScreen()">
+<body class="tilt p-6 py-10 h-[100vh] w-full flex items-start sm:items-center justify-center" onload="removeBootScreen()">
     <div class="showOrientationWarning"> Please turn off Auto rotate of your devise or resize your browser window to Portrait size to view the page </div>
-    <div class="chat-box relative aspect-[2/4] sm:max-w-[350px] md:min-w-[370px] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black shadow-md shadow-slate-800/80">
+    <div class="chat-box relative aspect-[2/4] h-full sm:max-w-[350px] md:min-w-[370px] bg-white rounded-[35px] overflow-auto flex flex-col items-center justify-between ring-8 ring-black shadow-md shadow-slate-800/80">
         <div class="w-full bg-white px-2 pt-0 flex items-start justify-between" style="z-index: 250;">
             <div id="statusBar1" class=" flex items-center justify-start w-1/3 pl-3 pt-2.5 text-white">
                 <p class="text-sm mr-1 font-bold" id="clock"> 12:01 PM </p>
